impostazione colori pagina

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>     <!--nav bar-->
-            
+        <header class="nav">     <!--nav bar-->
+            <div class="genere">Donna Uomo Bambino</div>
+            <div>logo</div>
+            <div>icone</div>
         </header>
 
-        <section>     <!--sezione vestiti-->
+        <section class="vestiti">     <!--sezione vestiti-->
 
         </section>
 
-        <footer>     <!--info-->
+        <footer class="info">     <!--info-->
 
         </footer>
     </body>
