posizionamento generi e logo

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     </head>
     <body>
         <header class="nav">     <!--nav bar-->
-            <div class="genere">Donna Uomo Bambino</div>
-            <div>logo</div>
-            <div>icone</div>
+            <div class="genere">
+                <a href="#" class="btn">Donna</a>
+                <a href="#" class="btn">Uomo</a>
+                <a href="#" class="btn">Bambino</a>
+            </div>
+
+            <img class="logo" src="img/boolean-logo.png" alt="Logo Boolean">
+
+            <div class="icon">
+                icone
+            </div>
         </header>
 
         <section class="vestiti">     <!--sezione vestiti-->
