--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>html-css-boolando</title>
+
         <link rel="stylesheet" href="style.css">
+        <!-- icona cuore -->
+        <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
     <body>
         <header class="nav">     <!--nav bar-->
@@ -17,7 +20,8 @@
             <img class="logo" src="img/boolean-logo.png" alt="Logo Boolean">
 
             <div class="icon">
-                icone
+                &#xf004;
+                <i class='far fa-heart'></i>
             </div>
         </header>
 
