inserimento icone (visualizazzione sbagliata)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="style.css">
         <!-- icona cuore -->
-        <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header class="nav">     <!--nav bar-->
@@ -20,8 +20,9 @@
             <img class="logo" src="img/boolean-logo.png" alt="Logo Boolean">
 
             <div class="icon">
-                &#xf004;
-                <i class='far fa-heart'></i>
+                <i class="fa fa-user"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-bag-shopping"></i>bag
             </div>
         </header>
 
