inserimento prima card - prova

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         </header>
 
         <section class="vestiti">     <!--sezione vestiti-->
-
+            <div class="card">
+                <img class="model" src="img/1.webp">
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
         </section>
 
         <footer class="info">     <!--info-->
