--- a/index.html
+++ b/index.html
@@ -21,18 +21,37 @@
 
             <div class="icon">
                 <i class="fa fa-user"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-bag-shopping"></i>bag
+                <i class="fa fa-heart-o"></i>
+                <i class="fa fa-shopping-bag"></i>
             </div>
         </header>
 
         <section class="vestiti">     <!--sezione vestiti-->
             <div class="card">
-                <img class="model" src="img/1.webp">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <img class="model due" src="img/1b.webp" alt="">
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
                 <div class="marchio">Levi's</div>
                 <h4>FIT TEE UNISEX</h4>
                 <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
             </div>
+
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </section>
 
         <footer class="info">     <!--info-->
