--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <div class="relative">
                     <div class="transizione">
                         <img class="model uno" src="img/1.webp" alt="">
-                        <img class="model due" src="img/1b.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
                     </div>
 
                     <div class="near">
