--- a/index.html
+++ b/index.html
@@ -49,11 +49,115 @@
                 <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
             </div>
 
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
+            
+            <div class="card">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
+
+            <div class="card">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
+
+            <div class="card">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
+
+            <div class="card">
+                <div class="relative">
+                    <div class="transizione">
+                        <img class="model uno" src="img/1.webp" alt="">
+                        <div class="inner">
+                            <img class="model due" src="img/1b.webp" alt="">
+                        </div>
+                    </div>
+
+                    <div class="near">
+                        <div class="perc-sconto">-50%</div>
+                        <div class="green">Sostenibilità</div>
+                    </div>
+
+                    <i class="fa fa-heart cuore"></i>
+                </div>
+
+                <div class="marchio">Levi's</div>
+                <h4>FIT TEE UNISEX</h4>
+                <div class="prezzo">14,99 € <s class="sconto">29,99 €</s></div>
+            </div>
         </section>
 
         <footer class="info">     <!--info-->
