suddivisione parte footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,25 @@
         </section>
 
         <footer class="info">     <!--info-->
+            <div class="sinistra">
+                <h5>Boolando s.r.l.</h5>
+                <div>
+                    <span>Informazioni legali</span>
+                    <span>Informativa sulla privacy</span>
+                    <span>Diritto di recesso</span>
+                </div>
+            </div>
 
+            <div class="destra">
+                <h6>Trovaci anche su</h6>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </footer>
     </body>
 </html>
