--- a/index.html
+++ b/index.html
@@ -157,24 +157,26 @@
         </section>
 
         <footer class="info">     <!--info-->
-            <div class="sinistra">
-                <h5>Boolando s.r.l.</h5>
-                <div>
-                    <span>Informazioni legali</span>
-                    <span>Informativa sulla privacy</span>
-                    <span>Diritto di recesso</span>
+            <div class="white">
+                <div class="sinistra">
+                    <h5>Boolando s.r.l.</h5>
+                    <div>
+                        <span>Informazioni legali</span>
+                        <span>Informativa sulla privacy</span>
+                        <span>Diritto di recesso</span>
+                    </div>
                 </div>
-            </div>
 
-            <div class="destra">
-                <h6>Trovaci anche su</h6>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <div class="destra">
+                    <h6>Trovaci anche su</h6>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </body>
