--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 
                 <div class="destra">
                     <h6>Trovaci anche su</h6>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                    <div>
+                        <i class="fa-brands fa-square-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-pinterest"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
                 </div>
             </div>
         </footer>
